EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Client__c/fields/Address__c.field-meta.xml
<CustomField>
  <fullName>Address__c</fullName><label>Address</label><type>TextArea</type><length>255</length><visibleLines>3</visibleLines>
</CustomField>