EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Client__c/fields/Country__c.field-meta.xml
<CustomField>
  <fullName>Country__c</fullName><label>Country</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>India</fullName><default>true</default></value><value><fullName>USA</fullName><default>false</default></value><value><fullName>Singapore</fullName><default>false</default></value><value><fullName>Other</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>