EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Client__c/fields/Email__c.field-meta.xml
<CustomField>
  <fullName>Email__c</fullName><label>Email</label><type>Email</type><required>false</required>
</CustomField>