EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Client__c/fields/Phone__c.field-meta.xml
<CustomField>
  <fullName>Phone__c</fullName><label>Phone</label><type>Phone</type><required>false</required>
</CustomField>