EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Client__c/validationRules/Email_Valid_Address.validationRule-meta.xml
<ValidationRule><fullName>Email_Valid_Address</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Email__c)),NOT(REGEX(Email__c,"^[a-zA-Z0-9._]+@[a-zA-Z0-9.]+\\.[a-zA-Z]{2,}$")))</errorConditionFormula><errorMessage>Please Enter Valid Email Address</errorMessage></ValidationRule>